--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,6 @@
-# ??? H2 ??? file-based ??? in-memory
 spring.datasource.url=jdbc:h2:file:./data/flashcard_db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-
-# ??? Spring Boot ????????????? Entity
+spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
-
-# ???????? h2-console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
